--- a/style/style.css
+++ b/style/style.css
@@ -10,14 +10,13 @@ body {
 	background-image:url('../images/grad.jpg');
 	background-size:cover;
 	font-family: sans-serif;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .layer {
-    float: left;
+    float: center;
     box-shadow: 0 8px 8px 0 rgba(0,0,0,0.05);
-    display: inline-table;
-    max-width: 380px;
+    width: 70%;
     box-sizing: content-box;
     max-height: 385px;
     border-radius: 12px;
@@ -31,6 +30,8 @@ body {
     bottom: 0;
     right: 0;
 	background: rgba(255,255,255,.92);
+	display: table-column;
+	align-items: center
 }
 
 
@@ -44,12 +45,16 @@ body {
     display: inline-block;
 	margin-top: 20px;
     margin-bottom: 12px;
-	margin-left: auto;
-    margin-right: auto;
+	margin-left: 10px;
+    margin-right: 10px;
+	width: 80%;
+	position: absolute;
+	top: 25%;
+	left: 10%;
 }
 
 .button-list a{
-    width: 60px;
+    width: 100px;
 	outline: 0;
     display: inline-block;
 	margin: 12px
@@ -57,8 +62,8 @@ body {
 }
 
 .button-list a img{
-    width: 60px;
-	height: 60px;
+    width: 100px;
+	height: 100px;
 	margin-left: auto;
 	margin-right: auto;
 }
